# dataride

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
assets/: action_required.md
config_examples/: scenario_airflow_local.yaml  scenario_airflow_local_with_aws_s3.yaml  scenario_ariflow_local_and_mwaa.yaml  scenario_aws_network.yaml  scenario_aws_redshift_cluster_no_network.yaml  scenario_aws_s3_and_data_catalog.yaml  scenario_aws_s3_and_glue_crawler.yaml  scenario_aws_s3_storage.yaml
config_templates/: scenario_aws_database_and_bucket.yaml  scenario_aws_network.yaml  scenario_aws_s3_storage.yaml  scenario_aws_storage_and_local_mageai.yaml
docs/: 1-docs-resources.md  2-docs-assets.md  README.md
extra_assets/: action_required.md
infra_config_examples/: scenario_aws_s3_and_glue_crawler.yaml
infra_defaults/: _config_environment.yaml  _config_infra.yaml  _config_variable.yaml  aws_db_instance.yaml  aws_eip.yaml  aws_glue_crawler.yaml  aws_internet_gateway.yaml  aws_mwaa_environment.yaml  aws_nat_gateway.yaml  aws_redshift_cluster.yaml  aws_redshift_cluster_subnet.yaml  aws_route_table.yaml  aws_route_table_association.yaml  aws_s3.yaml  aws_s3_directory.yaml  aws_security_group.yaml  aws_security_group_rule.yaml  aws_subnet.yaml  aws_vpc.yaml  aws_vpc_endpoint.yaml  config_main.yaml
infra_templates/: _config_environment.tf  _config_variable.tf  aws_db_instance.tf  aws_eip.tf  aws_glue_catalog_database.tf  aws_glue_crawler.tf  aws_internet_gateway.tf  aws_mwaa_environment.tf  aws_nat_gateway.tf  aws_redshift_cluster.tf  aws_redshift_cluster_subnet.tf  aws_route_table.tf  aws_route_table_association.tf  aws_s3.tf  aws_s3_bucket.tf  aws_s3_directory.tf  aws_security_group.tf  aws_security_group_rule.tf  aws_subnet.tf  (+4 more)
(+42 files in other folders)
