[tool.poetry]
name = "dataride"
version = "0.2.3"
description = "Lightning-fast data platform setup for small/medium projects & PoCs"
authors = ["Mateusz Polakowski <mateusz.polakowski.ds@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["data", "platform", "cloud", "infrastructure", "terraform", "python"]

[tool.poetry.dependencies]
python = "^3.8"
pyhcl = "^0.4.4"
toml = "^0.10.2"
python-hcl2 = "^3.0.5"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
jupyter = "^1.0.0"
pre-commit = "^2.20.0"
mypy = "^0.982"
pytest = "^7.2.0"

[tool.poetry.scripts]
dataride = "dataride.dataride:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
